--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,10 @@ body {
 	border: 1px solid #e0e0e0;
 	border-radius: 0 !important;
 	padding: 0px 20px;
+ transition: all 0.3s ease 0s;
+}
+.form__input:hover {
+ border: 1px solid orange;
 }
 .form__input:focus + .form__label {
 	opacity: 0;
@@ -134,6 +138,10 @@ body {
 	color: #fff;
 	font-weight: 700;
 	text-transform: uppercase;
+ transition: all 0.3s ease 0s;
+}
+.form__button:hover {
+ background-color: #a0364d;
 }
 .contacts__info {
 }
@@ -167,7 +175,22 @@ body {
 	margin-bottom: 3px;
 }
 .info-contacts__value {
+ position: relative;
 	color: #dd5471;
+}
+.info-contacts__value:hover::after {
+	width: 100%;
+}
+.info-contacts__value::after {
+	content: '';
+	position: absolute;
+	width: 0;
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #f85a47;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .contacts__map {
 	position: relative;
